--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Marker Clusters</title>
+    <title>Stroke Predictor analysis</title>
   <head>
         <meta charset="UTF-8">
         <meta name="Stroke Prediction Analysis" content="width=device-width, initial-scale=1.0">
@@ -12,8 +12,8 @@
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   </head>
   <body>
-    <h2><!-- Enter Heading --></h2>
-    <p><!-- Enter 1st blurb --></p>
+    <h2>Stroke Predictor analysis</h2>
+    <p>Stroke is one of the leading causes of mortality in US. Every year 25000 are affected by this</p>
     <!--<select id="selDataset">
         <option value="australia">Australia</option>
         <option value="brazil">Brazil</option>
@@ -35,6 +35,7 @@
 
     <!-- Our JavaScript for final project -->
     <script type="text/javascript" src="static/js/logic.js"></script>
+    <script type="text/javascript" src="static/js/plots.js"></script>
 
   </body>
 </html>
