--- a/final project/index.html
+++ b/final project/index.html
@@ -42,7 +42,7 @@
       <select id="stroke-factors">
         <option value="AgeGenderStroke">Age and Gender</option>
         <option value="BiologicalFactorsStroke">Biological Factors</option>
-        <option value="DemographicFactorsStroke">Demographic Factors</option>
+        <option value="LifestyleStroke">Lifestyle Factors</option>
       </select>
     <!-- <select id="stroke-factors">
       <option value="AgeGenderStroke">Age and Gender</option>
